--- a/src/main/resources/template.html
+++ b/src/main/resources/template.html
@@ -1,5 +1,5 @@
 <style>
-.table-hover > tbody > tr:hover {
+.table-hover tr:hover {
     background-color: #f5f5f5;
 }
 .table-hover td {
@@ -9,6 +9,5 @@
     color: #777;
     vertical-align: top;
     border: none;
-
 }
 </style>
